Fixed center alignment

--- a/assets/css/pic_style.css
+++ b/assets/css/pic_style.css
@@ -31,7 +31,7 @@ a {
 
 figure {
     display: inline-block;
-    margin: 20px; /* adjust as needed */
+    margin: 10px;
 }
 
 figure img {
